fixes z-index of image info

--- a/src/components/Gallery/IndividualView/gallery-view.css
+++ b/src/components/Gallery/IndividualView/gallery-view.css
@@ -35,7 +35,7 @@
   color: #eeeeee;
   background-color: #1d1d1d;
   font-size: 14px;
-  z-index: 99;
+  z-index: 4;
 }
 
 .img-links {
